<resources>
    <string name="app_name">FoodTruckManagementSystem</string>
    <string name="action_settings">Settings</string>
    <string name="newmmenu_label">New menu name:</string>
    <string name="newmenu_hint" />
    <string name="newmenu_button">Add menu</string>
    <string name="editmenu_label">Edit menu:</string>
    <string name="editmenu_button">Edit menu</string>
    <string name="newmitemname_label">Item name:</string>
    <string name="newitemname_hint" />
    <string name="newmitemprice_label">Price:</string>
    <string name="newitemprice_hint" />
    <string name="newitem_button">Add item</string>
    <string name="removeitem_label">Item name:</string>
    <string name="removeitem_button">Remove item</string>
    <string name="removemenu_button">Delete menu</string>
    <string name="newmmenuname_label">New name:</string>
    <string name="edititemname_label">New name:</string>
    <string name="edititem_hint" />
    <string name="edititemprice_label">New price:</string>
    <string name="edititemname_hint" />
    <string name="edititemprice_hint" />
    <string name="edititem_button">Update</string>
    <string name="menuspinner_hint">Enter a new menu</string>
    <string name="gridviewname_label">Items:</string>
    <string name="gridviewprice_label">Prices:</string>
    <string name="newitemprice_label">Price:</string>
    <string name="newitemname_label">Name:</string>
    <string name="edititem_label">Edit item:</string>
    <string name="menu_manager_button">Menu Manager</string>
    <string name="truck_manager_button">Truck Manager</string>
    <string name="newmtrucklocation_label">New truck location:</string>
    <string name="newtruckmenu_label">New truck menu:</string>
    <string name="newtrucklocation_hint">Enter location here</string>
    <string name="newtrucklocation_label">New truck location:</string>
    <string name="newtruckmenu_hint"> </string>
    <string name="newmtruckmenu_label">New truck menu:</string>
    <string name="createtruck_button">Create</string>
    <string name="selecttruck_label">Select truck:</string>
    <string name="selecttruck_button">Select</string>
    <string name="edittruckmenu_label">Edit menu:</string>
    <string name="edittruckmenu_button">Edit menu</string>
    <string name="edittrucklocation_label">Edit location:</string>
    <string name="edittruck_location" />
    <string name="edittrucklocation_button">Edit Location</string>
    <string name="newstaffname_label">New staff name:</string>
    <string name="newstaffname_hint">Enter name here</string>
    <string name="newstaffjob_label">New staff job:</string>
    <string name="newstaffjob_hint">Enter job here</string>
    <string name="addstaff_button">Create</string>
    <string name="selectstaff_label">Select staff:</string>
    <string name="editstaffname_label">New name:</string>
    <string name="editstaffname_hint"> </string>
    <string name="editstaffjob_label">New job:</string>
    <string name="editstaffjob_hint"> </string>
    <string name="editstaff_button">Edit</string>
    <string name="deletestaff_button">Delete</string>
    <string name="addshift_button">Add shift</string>
    <string name="deleteshift_button">Delete shift</string>
    <string name="staff_manager_button">Staff Manager</string>
    <string name="supply_manager_button">Supply Manager</string>
    <string name="newingredient_label">New ingredient:</string>
    <string name="newingredient_hint" />
    <string name="newingredient_button">Create</string>
    <string name="newequipment_label">New equipment:</string>
    <string name="newequipment_hint" />
    <string name="newequipment_button">Create</string>
    <string name="editsupply_label">Edit supply:</string>
    <string name="editsupply_hint" />
    <string name="editsupply_button">Edit</string>
    <string name="selectsupply_label">Select supply:</string>
    <string name="deletesupply_button">Delete</string>
    <string name="selecttruck_hint" />
    <string name="addsupply_button">Add to truck</string>
    <string name="addsupply_label">Supply amount:</string>
    <string name="addsupply_hint">qty</string>
    <string name="deletetruck_button">Delete</string>
    <string name="setdate_button">Set date</string>
    <string name="setstarttime_button">Set start time</string>
    <string name="shiftdate_hint">Shift date</string>
    <string name="shiftstarttime_hint">Start</string>
    <string name="shiftendtime_hint">End</string>
    <string name="shiftStartTime_label">From:</string>
    <string name="shiftEndTime_label">To:</string>
    <string name="shiftDate_label">On:</string>
    <string name="edittruckorder_label">Select truck:</string>
    <string name="order_manager_button">Order Manager</string>
    <string name="selectitemorder_label">Select item:</string>
    <string name="selectitemqtyorder_label">Quantity:</string>
    <string name="selectitemqtyorder_hint" />
    <string name="additemorder_button">Add to Order</string>
    <string name="ordertotal_label">Total:</string>
    <string name="ordertotalvalue_hint" />
    <string name="clearorder_button">Clear Order</string>
    <string name="removesupply_button">Remove supplies</string>
</resources>
