<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/staff_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.mcgill.ecse321.foodtruckmanagementsystem.StaffActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/linearLayout0"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/linearLayout1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/newstaffname_label"/>
            <EditText
                android:background="@drawable/border"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/newstaff_name"
                android:hint="@string/newstaffname_hint"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/linearLayout2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/newstaffjob_label"/>
            <EditText
                android:background="@drawable/border"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:id="@+id/newstaff_job"
                android:hint="@string/newstaffjob_hint"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addstaff_button"
                android:text="@string/addstaff_button"
                android:onClick="addStaff" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/linearLayout3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/selectstaff_label"/>
            <Spinner
                android:background="@drawable/spinnerborder"
                android:layout_height="wrap_content"
                android:layout_width="166dp"
                android:id="@+id/selectstaff_spinner"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/deletestaff_button"
                android:text="@string/deletestaff_button"
                android:onClick="deleteStaff" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/linearLayout4"
            android:layout_below="@+id/linearLayout4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/editstaffname_label"/>
            <EditText
                android:background="@drawable/border"
                android:layout_width="66dp"
                android:layout_height="wrap_content"
                android:id="@+id/editstaff_name"
                android:hint="@string/editstaffname_hint"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/editstaffjob_label"/>
            <EditText
                android:background="@drawable/border"
                android:layout_width="66dp"
                android:layout_height="wrap_content"
                android:id="@+id/editstaff_job"
                android:hint="@string/editstaffjob_hint"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editstaff_button"
                android:text="@string/editstaff_button"
                android:onClick="updateStaff" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/linearLayout5"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/shiftDate_label"/>
            <EditText
                android:background="@drawable/border"
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:id="@+id/shiftdate_display"
                android:hint="@string/shiftdate_hint"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:onClick="setShiftDate" />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/shiftStartTime_label"/>
            <EditText
                android:background="@drawable/border"
                android:layout_width="77dp"
                android:layout_height="wrap_content"
                android:id="@+id/shiftstarttime_display"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/shiftstarttime_hint"
                android:onClick="setShiftStartTime" />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/shiftEndTime_label"/>
            <EditText
                android:background="@drawable/border"
                android:layout_width="77dp"
                android:layout_height="wrap_content"
                android:id="@+id/shiftendtime_display"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/shiftendtime_hint"
                android:onClick="setShiftEndTime" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/linearLayout7"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/selecttruck_label"/>
            <Spinner
                android:background="@drawable/spinnerborder"
                android:layout_height="wrap_content"
                android:layout_width="166dp"
                android:id="@+id/selecttruckstaff_spinner"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addshift_button"
                android:text="@string/addshift_button"
                android:onClick="addShift" />
        </LinearLayout>

        <GridView
            android:layout_below="@+id/linearLayout7"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/gridview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:numColumns="4"
            android:verticalSpacing="1px"
            android:horizontalSpacing="1px"
            android:background="#ffffff"
            android:columnWidth="75dp"
            android:layout_margin="1dp">
        </GridView>
            -->
    </LinearLayout>

</RelativeLayout>
