<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/supply_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.mcgill.ecse321.foodtruckmanagementsystem.SupplyActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/linearLayout0"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/linearLayout1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/newingredient_label"/>
            <EditText
                android:background="@drawable/border"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:id="@+id/newingredient_name"
                android:hint="@string/newingredient_hint"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/newingredient_button"
                android:text="@string/newingredient_button"
                android:onClick="addIngredient" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/linearLayout2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/newequipment_label"/>
            <EditText
                android:background="@drawable/border"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:id="@+id/newequipment_name"
                android:hint="@string/newequipment_hint"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/newequipment_button"
                android:text="@string/newequipment_button"
                android:onClick="addEquipment" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/linearLayout3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/selectsupply_label"/>
            <Spinner
                android:background="@drawable/spinnerborder"
                android:layout_height="wrap_content"
                android:layout_width="155dp"
                android:id="@+id/selectsupply_spinner"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/deletesupply_button"
                android:text="@string/deletesupply_button"
                android:onClick="deleteSupplyType" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/linearLayout4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/editsupply_label"/>
            <EditText
                android:background="@drawable/border"
                android:layout_width="177dp"
                android:layout_height="wrap_content"
                android:id="@+id/editsupply_name"
                android:hint="@string/editsupply_hint"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editsupply_button"
                android:text="@string/editsupply_button"
                android:onClick="editSupply" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/linearLayout5"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/selecttruck_label"/>
            <Spinner
                android:background="@drawable/spinnerborder"
                android:layout_height="wrap_content"
                android:layout_width="122dp"
                android:id="@+id/selecttrucksupply_spinner"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/removesupply_button"
                android:text="@string/removesupply_button"
                android:onClick="removeSupply" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/linearLayout6"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/addsupply_label"/>
            <EditText
                android:digits="0123456789."
                android:background="@drawable/border"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:id="@+id/addsupply_amount"
                android:hint="@string/addsupply_hint"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addsupply_button"
                android:text="@string/addsupply_button"
                android:onClick="addSupply" />
        </LinearLayout>
        <GridView
            android:layout_below="@+id/linearLayout6"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/gridview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:numColumns="2"
            android:verticalSpacing="1px"
            android:horizontalSpacing="1px"
            android:background="#ffffff"
            android:columnWidth="75dp"
            android:layout_margin="1dp">

            <!--content will be generate programmatically-->
        </GridView>
    </LinearLayout>

</RelativeLayout>
