<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/truck_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.mcgill.ecse321.foodtruckmanagementsystem.TruckActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/linearLayout0"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/linearLayout1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/newtrucklocation_label"/>
            <EditText
                android:background="@drawable/border"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/newtruck_location"
                android:hint="@string/newtrucklocation_hint"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/linearLayout2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <TextView
                android:gravity="left"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/newmtruckmenu_label"/>
            <Spinner
                android:background="@drawable/spinnerborder"
                android:layout_height="wrap_content"
                android:layout_width="144dp"
                android:id="@+id/newtruckmenu_spinner"/>
            <Button
                android:gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/createtruck_button"
                android:text="@string/createtruck_button"
                android:onClick="addTruck" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/linearLayout3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <TextView
                android:gravity="left"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/selecttruck_label"/>
            <Spinner
                android:background="@drawable/spinnerborder"
                android:layout_height="wrap_content"
                android:layout_width="166dp"
                android:id="@+id/selecttruck_spinner"/>
            <Button
                android:gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/deletetruck_button"
                android:text="@string/deletetruck_button"
                android:onClick="deleteTruck" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/linearLayout4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <TextView
                android:gravity="left"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/edittruckmenu_label"/>
            <Spinner
                android:background="@drawable/spinnerborder"
                android:layout_height="wrap_content"
                android:layout_width="166dp"
                android:id="@+id/edittruckmenu_spinner"/>
            <Button
                android:gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edittruckmenu_button"
                android:text="@string/edittruckmenu_button"
                android:onClick="editTruckMenu" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/linearLayout5"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <TextView
                android:gravity="left"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/edittrucklocation_label"/>
            <EditText
                android:background="@drawable/border"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:id="@+id/edittruck_location"
                android:hint="@string/edittruck_location"/>
            <Button
                android:gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edittrucklocation_button"
                android:text="@string/edittrucklocation_button"
                android:onClick="editTruckLocation" />

        </LinearLayout>
        <GridView
            android:layout_below="@+id/linearLayout5"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/gridview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:numColumns="2"
            android:verticalSpacing="1px"
            android:horizontalSpacing="1px"
            android:background="#ffffff"
            android:columnWidth="75dp"
            android:layout_margin="1dp">

            <!--content will be generate programmatically-->
        </GridView>
    </LinearLayout>

</RelativeLayout>
